chore: update requirement

--- a/需求说明.md
+++ b/需求说明.md
@@ -13,7 +13,7 @@
 #### AC 1 添加 Item
 
 * 我应当能够在输入框（就是 Enter you todo item 那个输入框）中输入 TODO item 的内容（内容为纯文本）。
-* 当我输入完毕之后，点击 “+” 按钮就可以在 TODO item 列表中第一个位置添加一个新的 item，且它的文本应该和我输入的文本一致。
+* 当我输入完毕之后，点击 “+” 按钮就可以在 TODO item 列表中添加一个新的 item，且它的文本应该和我输入的文本一致。
 * 当新的 item 添加完毕之后，应当清空输入框中的文字。
 
 #### AC 2 避免开头和结尾的空格
